launchpad-buildd (141) UNRELEASED; urgency=medium

  * buildsnap: Grant access to the proxy during the build phase as well as
    during the pull phase (LP: #1642281).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 04 Nov 2016 10:47:41 +0000

launchpad-buildd (140) trusty; urgency=medium

  * buildsnap: Catch urllib2.URLError as well as urllib2.HTTPError when
    trying to revoke the proxy token (LP: #1610916).
  * lpbuildd.snap: Upload *.manifest files as well as *.snap (LP: #1608432).
  * buildsnap: Set https_proxy to an http:// URL rather than https://; the
    former is more accurate anyway and the latter breaks npm (LP: #1588870).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 16 Sep 2016 17:39:12 +0100

launchpad-buildd (139) trusty; urgency=medium

  * buildsnap: Set LANG=C.UTF-8 when running snapcraft.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 05 Apr 2016 16:11:01 +0100

launchpad-buildd (138) trusty; urgency=medium

  [ Colin Watson ]
  * slave-prep: Output current versions of git-build-recipe, git, and
    qemu-user-static.
  * Always raise exception instances rather than using the two-argument form
    of raise.
  * buildsnap: Run just "snapcraft" rather than "snapcraft all"; works with
    snapcraft << 2.0 and >= 2.3.
  * sbuild-package: Default LANG/LC_ALL to C.UTF-8 (LP: #1552791).

  [ Kit Randel ]
  * Add http/s proxy support for snap builds.
  * Refactor buildsnap into distinct repo, pull, build and proxy token
    revocation phases.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 03 Mar 2016 15:44:12 -0300

launchpad-buildd (137) trusty; urgency=medium

  * Remove handling for pre-karmic versions of Twisted that didn't support
    --umask.
  * Stop cleaning /var/log/launchpad-buildd/ from cron; logrotate handles
    that now.
  * Configure systemd-timesyncd to use the NTP server configured in
    /etc/launchpad-buildd/default.
  * Try to load the nbd module when starting launchpad-buildd
    (LP: #1531171).